Fix: Switch the default theme from light mode to dark mode and improve some styles #9869 (#10552)
### What problem does this PR solve?

Fix: Switch the default theme from light mode to dark mode and improve
some styles #9869
-Update UI component styles such as input boxes, tables, and prompt
boxes
-Optimize login page layout and style details
-Revise some of the wording, such as uniformly changing "data flow" to
"pipeline"
-Adjust the parser to support the markdown type

### Type of change

- [x] Bug Fix (non-breaking change which fixes an issue)

--- a/web/src/pages/login-next/index.less
+++ b/web/src/pages/login-next/index.less
@@ -42,6 +42,10 @@
 //////////////////////////////////////////////////////////////////////////
 .perspective-1000 {
   perspective: 1000px;
+  overflow: hidden;
+  min-height: 680px;
+  display: flex;
+  align-items: center;
 }
 .transform-style-3d {
   transform-style: preserve-3d;
